@@ -461,6 +461,12 @@
 # Use "log_dest none" if you wish to disable logging.
 #log_dest stderr
 
+# If using syslog logging (not on Windows), messages will be logged to the
+# "daemon" facility by default. Use the log_facility option to choose which of
+# local0 to local7 to log to instead. The option value should be an integer
+# value, e.g. "log_facility 5" to use local5.
+#log_facility
+
 # Types of messages to log. Use multiple log_type lines for logging
 # multiple types of messages.
 # Possible types are: debug, error, warning, notice, information, 
